# das-events

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-18-das-events.md
docs/superpowers/specs/: 2026-06-18-das-events-design.md
examples/: config.yaml  config_jjk.yaml  config_teleseism.yaml
src/das_events/: __init__.py  catalog.py  cli.py  config.py  detect.py  features.py  io.py  pipeline.py  select.py  stage.py  teleseism.py  waterfall.py
tests/: conftest.py  test_catalog.py  test_config.py  test_detect.py  test_features.py  test_io.py  test_pipeline.py  test_select.py  test_semblance.py  test_stage.py  test_teleseism.py  test_waterfall.py
